kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eco-footprint-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "eco-footprint-ip"
    networking.gke.io/managed-certificates: "eco-footprint-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: eco-footprint-service
            port:
              number: 80
